Mise à jour du notebook : gestion des modèles avec MLFlow (RandomForest et LightGBM)

--- a/2_notebook_modelisation_012025.ipynb
+++ b/2_notebook_modelisation_012025.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,15 +27,17 @@
     "import seaborn as sns\n",
     "import mlflow\n",
     "import mlflow.sklearn\n",
+    "from mlflow.tracking import MlflowClient\n",
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.datasets import make_classification\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from lightgbm import LGBMClassifier\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -379,21 +381,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test des modèles"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Donnée fictives pour tester le fonctionnement de l'environement\n",
+    "# Création de données fictives pour le modèle Random Forest\n",
+    "X, y = make_classification(n_samples=1000, n_features=10, random_state=123)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/01/23 06:54:59 INFO mlflow.tracking.fluent: Experiment with name 'RandomForest_Model_Tracking' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment 'RandomForest_Model_Tracking' configured with tracking URI: sqlite:///mlruns.db\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/01/23 06:55:12 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "Registered model 'RandomForest_Model' already exists. Creating a new version of this model...\n",
+      "Created version '3' of model 'RandomForest_Model'.\n",
+      "C:\\Users\\dfari\\AppData\\Local\\Temp\\ipykernel_12664\\3081560791.py:47: FutureWarning: ``mlflow.tracking.client.MlflowClient.get_latest_versions`` is deprecated since 2.9.0. Model registry stages will be removed in a future major release. To learn more about the deprecation of model registry stages, see our migration guide here: https://mlflow.org/docs/latest/model-registry.html#migrating-from-stages\n",
+      "  latest_version_rf = client.get_latest_versions(registered_model_name_rf, stages=[\"None\"])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Latest version of 'RandomForest_Model': 3\n",
+      "Run 'f162ed4075d54d689f6f4c8939e54085' completed and logged to experiment 'RandomForest_Experiment'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mlflow.set_tracking_uri(\"sqlite:///mlruns.db\")  # Stockage local MLflow\n",
+    "\n",
+    "# Expérimentation\n",
+    "experiment_name = \"RandomForest_Model_Tracking\"\n",
+    "mlflow.set_experiment(experiment_name)\n",
+    "\n",
+    "print(f\"Experiment '{experiment_name}' configured with tracking URI: sqlite:///mlruns.db\")\n",
+    "\n",
+    "# Lancer une expérimentation pour Random Forest\n",
+    "with mlflow.start_run(run_name=\"RandomForest_Baseline_Experiment\") as run:\n",
+    "    # Définir des tags pour l’expérimentation\n",
+    "    mlflow.set_tag(\"version_data\", \"v1.0\")\n",
+    "    mlflow.set_tag(\"description\", \"Baseline Random Forest model\")\n",
+    "\n",
+    "    # 1. Logging des paramètres\n",
+    "    mlflow.log_param(\"n_estimators\", 200)\n",
+    "    mlflow.log_param(\"max_depth\", None)\n",
+    "    mlflow.log_param(\"random_state\", 123)\n",
+    "\n",
+    "    # 2. Entraînement du modèle Random Forest\n",
+    "    rf_model = RandomForestClassifier(n_estimators=200, random_state=123)\n",
+    "    rf_model.fit(X_train, y_train)\n",
+    "\n",
+    "    # 3. Évaluation\n",
+    "    auc_score_rf = roc_auc_score(y_test, rf_model.predict_proba(X_test)[:, 1])\n",
+    "    mlflow.log_metric(\"AUC\", auc_score_rf)\n",
+    "\n",
+    "    # 4. Enregistrement du modèle\n",
+    "    registered_model_name_rf = \"RandomForest_Model\"\n",
+    "    mlflow.sklearn.log_model(\n",
+    "        rf_model,\n",
+    "        \"model\",\n",
+    "        registered_model_name=registered_model_name_rf\n",
+    "    )\n",
+    "\n",
+    "    # Récupérer et afficher la dernière version enregistrée\n",
+    "    from mlflow.tracking import MlflowClient\n",
+    "\n",
+    "    client = MlflowClient()\n",
+    "    latest_version_rf = client.get_latest_versions(registered_model_name_rf, stages=[\"None\"])\n",
+    "    print(f\"Latest version of '{registered_model_name_rf}': {latest_version_rf[0].version}\")\n",
+    "\n",
+    "    print(f\"Run '{run.info.run_id}' completed and logged to experiment 'RandomForest_Experiment'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Donnée fictives pour tester le modèle LightGBM\n",
     "X, y = make_classification(n_samples=1000, n_features=10, random_state=42)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment 'LightGBM_Model_Tracking' configured with tracking URI: sqlite:///mlruns.db\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -409,9 +521,8 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 362, number of negative: 388\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000837 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000137 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 2502\n",
       "[LightGBM] [Info] Number of data points in the train set: 750, number of used features: 10\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.482667 -> initscore=-0.069361\n",
@@ -443,14 +554,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/01/22 17:05:31 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+      "2025/01/23 06:55:18 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "Registered model 'LightGBM_Model' already exists. Creating a new version of this model...\n",
+      "Created version '4' of model 'LightGBM_Model'.\n",
+      "C:\\Users\\dfari\\AppData\\Local\\Temp\\ipykernel_12664\\4046291865.py:44: FutureWarning: ``mlflow.tracking.client.MlflowClient.get_latest_versions`` is deprecated since 2.9.0. Model registry stages will be removed in a future major release. To learn more about the deprecation of model registry stages, see our migration guide here: https://mlflow.org/docs/latest/model-registry.html#migrating-from-stages\n",
+      "  latest_version_lgbm = client.get_latest_versions(registered_model_name_lgbm, stages=[\"None\"])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Latest version of 'LightGBM_Model': 4\n",
+      "Run '686fe67f9aec4252ab4058532eced7bc' completed and logged to experiment 'LightGBM_Model_Tracking'.\n"
      ]
     }
    ],
    "source": [
     "mlflow.set_tracking_uri(\"sqlite:///mlruns.db\")  # Stockage local MLflow\n",
     "\n",
-    "with mlflow.start_run(run_name=\"LightGBM_baseline\"):\n",
+    "# Expérimentation\n",
+    "experiment_name = \"LightGBM_Model_Tracking\"\n",
+    "mlflow.set_experiment(experiment_name)\n",
+    "\n",
+    "print(f\"Experiment '{experiment_name}' configured with tracking URI: sqlite:///mlruns.db\")\n",
+    "\n",
+    "with mlflow.start_run(run_name=\"LightGBM_Baseline_Experiment\") as run:\n",
+    "    # Définir des tags pour l'expérimentation\n",
+    "    mlflow.set_tag(\"version_data\", \"v1.0\")\n",
+    "    mlflow.set_tag(\"description\", \"Baseline model with default LightGBM parameters\")\n",
+    "\n",
     "    # 1. Logging de paramètres basiques\n",
     "    mlflow.log_param(\"n_estimators\", 100)\n",
     "    mlflow.log_param(\"random_state\", 42)\n",
@@ -463,13 +596,26 @@
     "    auc_score = roc_auc_score(y_test, model.predict_proba(X_test)[:, 1])\n",
     "    mlflow.log_metric(\"AUC\", auc_score)\n",
     "\n",
-    "    # 4. Enregistrement du modèle\n",
-    "    mlflow.sklearn.log_model(model, \"model\")"
+    "    registered_model_name_lgbm = \"LightGBM_Model\"\n",
+    "    mlflow.sklearn.log_model(\n",
+    "        model,\n",
+    "        \"model\",\n",
+    "        registered_model_name=registered_model_name_lgbm\n",
+    "    )\n",
+    "\n",
+    "    # Récupérer et afficher la dernière version enregistrée\n",
+    "    from mlflow.tracking import MlflowClient\n",
+    "\n",
+    "    client = MlflowClient()\n",
+    "    latest_version_lgbm = client.get_latest_versions(registered_model_name_lgbm, stages=[\"None\"])\n",
+    "    print(f\"Latest version of '{registered_model_name_lgbm}': {latest_version_lgbm[0].version}\")\n",
+    "\n",
+    "    print(f\"Run '{run.info.run_id}' completed and logged to experiment '{experiment_name}'.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,8 +640,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Génération du fichier requirement"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -508,14 +661,14 @@
     }
    ],
    "source": [
-    "# Chemin vers les fichiers requirements\n",
+    "# Chemin vers les requirements\n",
     "raw_requirements_file = \"D://Pro//OpenClassrooms//Projet_7//3_dossier_code_012025/raw_requirements.txt\"\n",
     "cleaned_requirements_file = \"D://Pro//OpenClassrooms//Projet_7//3_dossier_code_012025/requirements.txt\"\n",
     "\n",
     "# Chemin absolu de pip\n",
     "pip_path = \"D://Pro//OpenClassrooms//Projet_7//.venv//Scripts//pip.exe\"\n",
     "\n",
-    "# Créer le répertoire s'il n'existe pas\n",
+    "# Repo\n",
     "os.makedirs(os.path.dirname(raw_requirements_file), exist_ok=True)\n",
     "\n",
     "# Générer le fichier raw_requirements.txt\n",
@@ -530,11 +683,11 @@
     "    print(f\"Une erreur inattendue s'est produite : {e}\")\n",
     "    exit(1)\n",
     "\n",
-    "# Nettoyer le fichier raw_requirements.txt pour générer requirements.txt\n",
+    "# Nettoyage du fichier requirements\n",
     "try:\n",
     "    with open(raw_requirements_file, \"r\") as raw_f, open(cleaned_requirements_file, \"w\") as cleaned_f:\n",
     "        for line in raw_f:\n",
-    "            # Si une ligne contient un @ file://, supprimer tout après le @\n",
+    "            # Nettoyage des lignes\n",
     "            if \"@ file://\" in line:\n",
     "                line = re.sub(r\"@ file://.*\", \"\", line)\n",
     "            cleaned_f.write(line)\n",
@@ -552,59 +705,46 @@
     }
    },
    "source": [
-    "Activer l'environement (.venv):\n",
+    "# Activer l'environement (avec .venv):\n",
+    "cd 3_dossier_code_012025\n",
     "Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass\n",
     "D:\\Pro\\OpenClassrooms\\Projet_7\\.venv\\Scripts\\Activate.ps1\n",
     "\n",
-    "Activer l'environement (Anaconda):\n",
+    "# Activer l'environement (avec Anaconda):\n",
     "conda activate D:/Pro/Env\n",
     "\n",
-    "Lancer l'UI MLflow :\n",
+    "# Lancer l'UI MLflow :\n",
     "mlflow ui --backend-store-uri sqlite:///mlruns.db\n",
     "\n",
-    "Accéder au serveur dans le navigateur :\n",
-    "http://127.0.0.1:5000"
+    "# Accéder au serveur MLflow (dans le navigateur) :\n",
+    "http://127.0.0.1:5000\n",
+    "\n",
+    "# Test unitaire avec PyTest\n",
+    "pytest tests/\n",
+    "\n",
+    "# Pousser les modifications sur Git\n",
+    "git add .\n",
+    "git commit -m \"Modifications...\"\n",
+    "# Sur branche de dévloppement\n",
+    "git push origin ajout-tests-ci\n",
+    "# Sur branche principale\n",
+    "git push origin main"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ouvrir le dossier\n",
+    "# Procédure d'installation sur nouvelle machine\n",
     "# cd /D D:\\Pro\\OpenClassrooms\\Projet_7\\3_dossier_code_012025\n",
     "# Remote\n",
     "# git remote -v\n",
     "# git remote add origin https://github.com/davfgh/Projet7_OpenClassrooms.git\n",
     "# git push -u origin main\n",
     "# davfgh\n",
-    "# token à la place du password git\n",
-    "\n",
-    "# Test unitaire\n",
-    "# pytest tests/\n",
-    "# Vérifier dans quel notebook ou script se font les test\n",
-    "# écrire le code qui permet juste de vérifier que cela marche\n",
-    "# Faire les installations\n",
-    "# Créée le dossier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Utilisation de du .venv\n",
-    "\n",
-    "# Chemin ou est intalllé le venv\n",
-    "# D:\\Pro\\OpenClassrooms\\Projet_7>\n",
-    "\n",
-    "# Activer l'execution de script temporairement\n",
-    "# Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass\n",
-    "\n",
-    "# Activer le .venv\n",
-    "# D:\\Pro\\OpenClassrooms\\Projet_7\\.venv\\Scripts\\Activate.ps1"
+    "# token à la place du password git\n"
    ]
   }
  ],
