Finalisation de l'implémentation des tests dans les actions Git

--- a/2_notebook_modelisation_012025.ipynb
+++ b/2_notebook_modelisation_012025.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -389,27 +389,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Création de données fictives pour le modèle Random Forest\n",
+    "# Données fictives pour le modèle Random Forest\n",
     "X, y = make_classification(n_samples=1000, n_features=10, random_state=123)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=123)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025/01/23 06:54:59 INFO mlflow.tracking.fluent: Experiment with name 'RandomForest_Model_Tracking' does not exist. Creating a new experiment.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -421,10 +414,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/01/23 06:55:12 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "2025/01/24 12:32:34 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
       "Registered model 'RandomForest_Model' already exists. Creating a new version of this model...\n",
-      "Created version '3' of model 'RandomForest_Model'.\n",
-      "C:\\Users\\dfari\\AppData\\Local\\Temp\\ipykernel_12664\\3081560791.py:47: FutureWarning: ``mlflow.tracking.client.MlflowClient.get_latest_versions`` is deprecated since 2.9.0. Model registry stages will be removed in a future major release. To learn more about the deprecation of model registry stages, see our migration guide here: https://mlflow.org/docs/latest/model-registry.html#migrating-from-stages\n",
+      "Created version '4' of model 'RandomForest_Model'.\n",
+      "C:\\Users\\dfari\\AppData\\Local\\Temp\\ipykernel_24868\\1878171291.py:40: FutureWarning: ``mlflow.tracking.client.MlflowClient.get_latest_versions`` is deprecated since 2.9.0. Model registry stages will be removed in a future major release. To learn more about the deprecation of model registry stages, see our migration guide here: https://mlflow.org/docs/latest/model-registry.html#migrating-from-stages\n",
       "  latest_version_rf = client.get_latest_versions(registered_model_name_rf, stages=[\"None\"])\n"
      ]
     },
@@ -432,8 +425,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Latest version of 'RandomForest_Model': 3\n",
-      "Run 'f162ed4075d54d689f6f4c8939e54085' completed and logged to experiment 'RandomForest_Experiment'.\n"
+      "Latest version of 'RandomForest_Model': 4\n",
+      "Run 'a1c9690cf713419d9dd07ba6be75d6f0' completed and logged to experiment 'RandomForest_Experiment'.\n"
      ]
     }
    ],
@@ -446,9 +439,9 @@
     "\n",
     "print(f\"Experiment '{experiment_name}' configured with tracking URI: sqlite:///mlruns.db\")\n",
     "\n",
-    "# Lancer une expérimentation pour Random Forest\n",
+    "# Lancement d'expérimentation pour Random Forest\n",
     "with mlflow.start_run(run_name=\"RandomForest_Baseline_Experiment\") as run:\n",
-    "    # Définir des tags pour l’expérimentation\n",
+    "    # Tags de l’expérimentation\n",
     "    mlflow.set_tag(\"version_data\", \"v1.0\")\n",
     "    mlflow.set_tag(\"description\", \"Baseline Random Forest model\")\n",
     "\n",
@@ -473,9 +466,7 @@
     "        registered_model_name=registered_model_name_rf\n",
     "    )\n",
     "\n",
-    "    # Récupérer et afficher la dernière version enregistrée\n",
-    "    from mlflow.tracking import MlflowClient\n",
-    "\n",
+    "    # Récupération et affichage de la dernière version enregistrée\n",
     "    client = MlflowClient()\n",
     "    latest_version_rf = client.get_latest_versions(registered_model_name_rf, stages=[\"None\"])\n",
     "    print(f\"Latest version of '{registered_model_name_rf}': {latest_version_rf[0].version}\")\n",
@@ -485,18 +476,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Donnée fictives pour tester le modèle LightGBM\n",
+    "# Donnée fictives pour le modèle LightGBM\n",
     "X, y = make_classification(n_samples=1000, n_features=10, random_state=42)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -511,8 +502,6 @@
      "output_type": "stream",
      "text": [
       "d:\\Pro\\OpenClassrooms\\Projet_7\\.venv\\Lib\\site-packages\\sklearn\\utils\\deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
-      "  warnings.warn(\n",
-      "d:\\Pro\\OpenClassrooms\\Projet_7\\.venv\\Lib\\site-packages\\sklearn\\utils\\deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -521,8 +510,9 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 362, number of negative: 388\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000137 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000793 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 2502\n",
       "[LightGBM] [Info] Number of data points in the train set: 750, number of used features: 10\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.482667 -> initscore=-0.069361\n",
@@ -554,10 +544,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/01/23 06:55:18 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "d:\\Pro\\OpenClassrooms\\Projet_7\\.venv\\Lib\\site-packages\\sklearn\\utils\\deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+      "  warnings.warn(\n",
+      "2025/01/24 12:32:42 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
       "Registered model 'LightGBM_Model' already exists. Creating a new version of this model...\n",
-      "Created version '4' of model 'LightGBM_Model'.\n",
-      "C:\\Users\\dfari\\AppData\\Local\\Temp\\ipykernel_12664\\4046291865.py:44: FutureWarning: ``mlflow.tracking.client.MlflowClient.get_latest_versions`` is deprecated since 2.9.0. Model registry stages will be removed in a future major release. To learn more about the deprecation of model registry stages, see our migration guide here: https://mlflow.org/docs/latest/model-registry.html#migrating-from-stages\n",
+      "Created version '5' of model 'LightGBM_Model'.\n",
+      "C:\\Users\\dfari\\AppData\\Local\\Temp\\ipykernel_24868\\3350498219.py:37: FutureWarning: ``mlflow.tracking.client.MlflowClient.get_latest_versions`` is deprecated since 2.9.0. Model registry stages will be removed in a future major release. To learn more about the deprecation of model registry stages, see our migration guide here: https://mlflow.org/docs/latest/model-registry.html#migrating-from-stages\n",
       "  latest_version_lgbm = client.get_latest_versions(registered_model_name_lgbm, stages=[\"None\"])\n"
      ]
     },
@@ -565,8 +557,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Latest version of 'LightGBM_Model': 4\n",
-      "Run '686fe67f9aec4252ab4058532eced7bc' completed and logged to experiment 'LightGBM_Model_Tracking'.\n"
+      "Latest version of 'LightGBM_Model': 5\n",
+      "Run 'c4b62b1c110b4ab0aa49a319c0a25973' completed and logged to experiment 'LightGBM_Model_Tracking'.\n"
      ]
     }
    ],
@@ -580,7 +572,7 @@
     "print(f\"Experiment '{experiment_name}' configured with tracking URI: sqlite:///mlruns.db\")\n",
     "\n",
     "with mlflow.start_run(run_name=\"LightGBM_Baseline_Experiment\") as run:\n",
-    "    # Définir des tags pour l'expérimentation\n",
+    "    # Tags pour l'expérimentation\n",
     "    mlflow.set_tag(\"version_data\", \"v1.0\")\n",
     "    mlflow.set_tag(\"description\", \"Baseline model with default LightGBM parameters\")\n",
     "\n",
@@ -603,40 +595,12 @@
     "        registered_model_name=registered_model_name_lgbm\n",
     "    )\n",
     "\n",
-    "    # Récupérer et afficher la dernière version enregistrée\n",
-    "    from mlflow.tracking import MlflowClient\n",
-    "\n",
+    "    # Récupérer et affichage de la dernière version enregistrée\n",
     "    client = MlflowClient()\n",
     "    latest_version_lgbm = client.get_latest_versions(registered_model_name_lgbm, stages=[\"None\"])\n",
     "    print(f\"Latest version of '{registered_model_name_lgbm}': {latest_version_lgbm[0].version}\")\n",
     "\n",
     "    print(f\"Run '{run.info.run_id}' completed and logged to experiment '{experiment_name}'.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Chemin vers le fichier requirements.txt\n",
-    "# requirements_file = \"D://Pro//OpenClassrooms//Projet_7//3_dossier_code_012025/requirements.txt\"\n",
-    "\n",
-    "# # Chemin absolu de pip\n",
-    "# pip_path = \"D://Pro//Env//Scripts//pip.exe\"\n",
-    "\n",
-    "# # Créer le répertoire s'il n'existe pas\n",
-    "# os.makedirs(os.path.dirname(requirements_file), exist_ok=True)\n",
-    "\n",
-    "# # Générer le fichier requirements.txt\n",
-    "# try:\n",
-    "#     with open(requirements_file, \"w\") as f:\n",
-    "#         result = subprocess.run([pip_path, \"freeze\"], stdout=f, text=True, check=True)\n",
-    "#     print(f\"Fichier requirements.txt généré à {requirements_file}\")\n",
-    "# except subprocess.CalledProcessError as e:\n",
-    "#     print(f\"Erreur lors de l'exécution de pip freeze : {e}\")\n",
-    "# except Exception as e:\n",
-    "#     print(f\"Une erreur inattendue s'est produite : {e}\")"
    ]
   },
   {
@@ -648,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +708,7 @@
     "# git remote add origin https://github.com/davfgh/Projet7_OpenClassrooms.git\n",
     "# git push -u origin main\n",
     "# davfgh\n",
-    "# token à la place du password git\n"
+    "# token à la place du password git"
    ]
   }
  ],
